create trigger handler
